--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "type":"module",
   "name": "car-doctor-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
+    "dev":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
